--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <li class="nav-item"><a href="#" class="nav-link text-light font-weight-bold text-uppercase px-3">Services</a></li>
             <li class="nav-item dropdown"><a class="nav-link text-light font-weight-bold text-uppercase px-3 dropdown-toggle"data-toggle="dropdown"href="#">Projets</a>
                 <div class="dropdown-menu">
-                    <a  class="dropdown-item" href="#">Projet1</a>
+                    <a  class="dropdown-item" href="#">Projet</a>
                     <a  class="dropdown-item" href="#">Projet2</a>
                     <a  class="dropdown-item" href="#">Projet3</a>
                     <a  class="dropdown-item" href="#">Projet4</a>
